tests/toy/neg/001135_mutation.toylang
program a = { if sleep then sleep; } .
